kubernetes/catalog/rabbitmq/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/Polemus/Unraid/main/RabbitMQ/RabbitMQ.xml
# Category: Network-Messenger
# Stars: 5358 | Downloads: 3797655850
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: rabbitmq
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rabbitmq
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: rabbitmq
          image: rabbitmq:management
          ports:
            - containerPort: 15672
              protocol: TCP
              name: mamangement-w
            - containerPort: 5672
              protocol: TCP
              name: query-port
          startupProbe:
            tcpSocket:
              port: 15672
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 60
          readinessProbe:
            tcpSocket:
              port: 15672
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 15672
            periodSeconds: 30
            failureThreshold: 3
          # No volume mounts defined
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      # No volumes defined
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: rabbitmq
  labels:
    app.kubernetes.io/name: rabbitmq
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: rabbitmq
  ports:
    - port: 15672
      targetPort: 15672
      protocol: TCP
      name: mamangement-w
    - port: 5672
      targetPort: 5672
      protocol: TCP
      name: query-port
  type: ClusterIP
