kubernetes/catalog/rabbitmq/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rabbitmq
  namespace: rabbitmq
  labels:
    app.kubernetes.io/name: rabbitmq
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rabbitmq.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: rabbitmq
          port: 15672
  tls:
    secretName: int-rlservers-com-tls
